--- a/ProyectoHome/vite-project/src/index.css
+++ b/ProyectoHome/vite-project/src/index.css
@@ -1,7 +1,7 @@
 /* Base Styles */
 :root {
-  --primary-color: #ffc107; /* Amarillo */
-  --secondary-color: #dc3545; /* Rojo */
+  --primary-color: #7fff07; /* Amarillo */
+  --secondary-color: #2ab101; /* Rojo */
   --text-color: #333333;
   --text-light: #777777;
   --light-bg: #f8f9fa;
