--- a/ProyectoHome/vite-project/containers/styles/ChatComponent.css
+++ b/ProyectoHome/vite-project/containers/styles/ChatComponent.css
@@ -7,16 +7,20 @@
     z-index: 2;
     border: 1px solid var(--secondary-color);
     background-color: var(--white);
-    width: 100px;
-    height: 100px;
+    width: 85px;
+    height: 85px;
     border-radius: 50%;
     bottom: 75px;
+    filter: drop-shadow(5px 5px 10px #000);
     right: 100px;
     cursor: pointer;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+.chat-btn .h5 {
+    color: var(--secondary-color);
 }
 
 .chat-icon {
