Correcion de Slider Home

--- a/ProyectoHome/vite-project/containers/styles/HeroHomeSection.css
+++ b/ProyectoHome/vite-project/containers/styles/HeroHomeSection.css
@@ -10,6 +10,8 @@
     display: flex;
     align-items: center;
     padding-top: 80px; /* Ajustado para el header fijo */
+    overflow: hidden;
+    transition: background-image 0.5s ease-in-out; 
   }
   
   .hero-section::before {
